# hecfda

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  pixi.toml  rproject.toml
.claude/: CLAUDE.md  PLAN.md
.github/workflows/: ci.yml  docs.yml
core/: CMakeLists.txt
core/include/hecfda/: constants.hpp
core/include/hecfda/model/alternative_comparison_report/: alternative_comparison_report.hpp
core/include/hecfda/model/alternatives/: alternative.hpp
core/include/hecfda/model/compute/: impact_area_scenario_simulation.hpp  random_provider.hpp
core/include/hecfda/model/extensions/: graphical_distribution.hpp
core/include/hecfda/model/interfaces/: i_can_be_null.hpp
core/include/hecfda/model/metrics/: aggregated_consequences_binned.hpp  aggregated_consequences_by_quantile.hpp  alternative_comparison_report_results.hpp  alternative_results.hpp  assurance_result_storage.hpp  categoried_paired_data.hpp  categoried_uncertain_paired_data.hpp  consequence_extensions.hpp  consequence_result.hpp  consequence_type.hpp  impact_area_scenario_results.hpp  performance_by_thresholds.hpp  scenario_results.hpp  study_area_consequences_binned.hpp  study_area_consequences_by_quantile.hpp  system_performance_results.hpp  threshold.hpp  threshold_enum.hpp
core/include/hecfda/model/paired_data/: curve_meta_data.hpp  dotnet_binary_search.hpp  graphical_uncertain_paired_data.hpp  i_category.hpp  i_composable.hpp  i_integrate.hpp  i_meta_data.hpp  i_multiply.hpp  i_paired_data.hpp  i_paired_data_producer.hpp  i_sample.hpp  interpolate_quantiles.hpp  paired_data.hpp  uncertain_paired_data.hpp
core/include/hecfda/model/scenarios/: scenario.hpp
core/include/hecfda/model/stage_damage/: hydraulic_profiles.hpp  impact_area_stage_damage.hpp  scenario_stage_damage.hpp
core/include/hecfda/model/structures/: deterministic_occupancy_type.hpp  first_floor_elevation_uncertainty.hpp  inventory.hpp  occupancy_type.hpp  structure.hpp  value_ratio_with_uncertainty.hpp  value_uncertainty.hpp
core/include/hecfda/model/utilities/: double_global_statics.hpp  graphical_frequency_uncertainty_calculators.hpp
core/include/hecfda/sampling/: dotnet_random.hpp
core/include/hecfda/statistics/: mathematics.hpp  sample_statistics.hpp  special_functions.hpp  validation.hpp
core/include/hecfda/statistics/convergence/: convergence_criteria.hpp
core/include/hecfda/statistics/distributions/: continuous_distribution.hpp  continuous_distribution_extensions.hpp  deterministic.hpp  empirical.hpp  gamma.hpp  i_distribution.hpp  i_distribution_enum.hpp  i_distribution_factory.hpp  lognormal.hpp  logpearson3.hpp  normal.hpp  pearson3.hpp  shifted_gamma.hpp  triangular.hpp  truncated_lognormal.hpp  truncated_logpearson3.hpp  truncated_normal.hpp  uncertain_to_deterministic_converter.hpp  uniform.hpp
core/include/hecfda/statistics/histograms/: dynamic_histogram.hpp  i_histogram.hpp
core/tests/: check.hpp  test_dotnet_random.cpp  test_fixtures.cpp  test_smoke.cpp  test_validation.cpp
fixtures/: README.md
fixtures/alternatives/: alternative.json  alternative_comparison_report.json  end_to_end.json
fixtures/compute/: bootstrap_to_paired_data.json  default_threshold.json  frequency_stage_sample.json  impact_area_scenario_simulation_deterministic.json  impact_area_scenario_simulation_seeded.json  simulation_validation.json
fixtures/convergence/: convergence_criteria.json
fixtures/distributions/: converter.json  deterministic.json  empirical.json  empirical_stacking.json  lognormal.json  logpearson3.json  normal.json  pearson3.json  sample_statistics.json  shifted_gamma.json  triangular.json  truncated_lognormal.json  truncated_logpearson3.json  truncated_normal.json  uniform.json
fixtures/histograms/: dynamic_histogram.json
fixtures/metrics/: aggregated_consequences_binned.json  aggregated_consequences_by_quantile.json  alternative_comparison_report_results.json  alternative_results.json  assurance_result_storage.json  binned_to_quantile.json  categoried_uncertain_paired_data.json  consequence_result.json  impact_area_scenario_results.json  performance_by_thresholds.json  scenario_results.json  study_area_consequences_binned.json  study_area_consequences_by_quantile.json  system_performance_results.json
fixtures/paired_data/: duplicate_values.json  graphical.json  graphical_calculators.json  interpolate_quantiles.json  paired_data.json  paired_data_ops.json  uncertain_paired_data.json  uncertain_paired_data_ops.json
fixtures/sampling/: dotnet_random.json  rng_digest.json
fixtures/scenarios/: scenario.json
hecfdapy/: CMakeLists.txt  pyproject.toml
hecfdapy/src/bindings/: glue.cpp
hecfdapy/src/hecfdapy/: __init__.py  distributions.py  workflow.py
hecfdapy/tests/: api_helpers.py  test_api_alternatives.py  test_api_distributions.py  test_api_scenario.py  test_api_simulation.py  test_api_stage_damage.py  test_fixtures.py
hecfdar/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  _pkgdown.yml
site/: _quarto.yml  index.qmd  requirements.txt  status.qmd
tools/: materialize_core.py  verify_oracles.py
(+100 files in other folders)
