cmake_minimum_required(VERSION 3.16)
project(hecfdapy CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(pybind11 CONFIG REQUIRED)
pybind11_add_module(_core src/bindings/glue.cpp)
target_include_directories(_core PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/hecfda_core/include)
install(TARGETS _core DESTINATION hecfdapy)
